Fix z-index

--- a/css/style.css
+++ b/css/style.css
@@ -315,7 +315,7 @@ body[fullscreen-quilt] .fullscreen-quilt {
     padding: 30px 20px 20px;
     background: #222;
     position: relative;
-    z-index: -1;
+    z-index: 2;
 }
 .app h3 {
     color: #f6f6f6
